# uiuc-apartments

./: .gitignore  README.md  pyproject.toml  run.py
uiuc_apartments/agencies/: appfolio.py  bankier.py  green_st.py  jsm.py  mhm.py  smile.py  smith.py  ugroup.py
